toolkit/content/minimal-xul.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"); 

* {
  -moz-user-focus: ignore;
  -moz-user-select: none;
  display: -moz-box;
  box-sizing: border-box;
}


[hidden="true"] {
  display: none;
}


[collapsed="true"] {
  visibility: collapse;
}


@supports -moz-bool-pref("layout.css.cached-scrollbar-styles.enabled") {
  scrollcorner:-moz-native-anonymous-no-specificity,
  resizer:-moz-native-anonymous-no-specificity,
  scrollbar:-moz-native-anonymous-no-specificity,
  scrollbarbutton:-moz-native-anonymous-no-specificity,
  slider:-moz-native-anonymous-no-specificity {
    



    all: initial;
    visibility: inherit;
    pointer-events: inherit;

    
    -moz-list-reversed: initial;
    -moz-font-smoothing-background-color: initial;
    -moz-min-font-size-ratio: initial;

    





    direction: ltr;

    



    font: 16px sans-serif;

    




    justify-items: start;

    


    vertical-align: initial !important;

    





    -moz-user-focus: ignore;
    -moz-user-select: none;
    display: -moz-box;
    box-sizing: border-box;
  }

  



  scrollbarbutton:-moz-native-anonymous-no-specificity,
  slider:-moz-native-anonymous-no-specificity,
  thumb:-moz-native-anonymous-no-specificity {
    direction: inherit;
    cursor: inherit;
  }
}

scrollbar[orient="vertical"],
slider[orient="vertical"],
thumb[orient="vertical"] {
  -moz-box-orient: vertical;
}

thumb {
  

  -moz-user-modify: initial;

  -moz-box-align: center;
  -moz-box-pack: center;
}



resizer {
  position: relative;
  z-index: 2147483647;
  

  appearance: auto;
  -moz-default-appearance: resizer;

  

  direction: ltr;
  writing-mode: initial;

  background: url("chrome://global/skin/icons/resizer.svg") no-repeat;
  background-size: 100% 100%;
  cursor: se-resize;
  width: 15px;
  height: 15px;
}


resizer[dir="bottom"][flip],
resizer[dir="bottomleft"],
resizer[dir="bottomstart"]:-moz-locale-dir(ltr),
resizer[dir="bottomend"]:-moz-locale-dir(rtl) {
  transform: scaleX(-1);
}

resizer[dir="bottomleft"],
resizer[dir="bottomstart"]:-moz-locale-dir(ltr),
resizer[dir="bottomend"]:-moz-locale-dir(rtl) {
  cursor: sw-resize;
}

resizer[dir="top"],
resizer[dir="bottom"] {
  cursor: ns-resize;
}

resizer[dir="left"] {
  transform: scaleX(-1);
}

resizer[dir="left"],
resizer[dir="right"] {
  cursor: ew-resize;
}

resizer[dir="topleft"] {
  cursor: nw-resize;
}

resizer[dir="topright"] {
  cursor: ne-resize;
}



thumb {
  display: -moz-box !important;
}


thumb[collapsed="true"] {
  visibility: hidden;
}

scrollbar, scrollbarbutton, scrollcorner, slider, thumb {
  -moz-user-select: none;
}

scrollcorner {
  display: -moz-box !important;
}

scrollcorner[hidden="true"] {
  display: none !important;
}

scrollbar[value="hidden"] {
  visibility: hidden;
}

@media (-moz-scrollbar-start-backward: 0) {
  scrollbarbutton[sbattr="scrollbar-up-top"] {
    display: none;
  }
}

@media (-moz-scrollbar-start-forward: 0) {
  scrollbarbutton[sbattr="scrollbar-down-top"] {
    display: none;
  }
}

@media (-moz-scrollbar-end-backward: 0) {
  scrollbarbutton[sbattr="scrollbar-up-bottom"] {
    display: none;
  }
}

@media (-moz-scrollbar-end-forward: 0) {
  scrollbarbutton[sbattr="scrollbar-down-bottom"] {
    display: none;
  }
}

@media (-moz-scrollbar-thumb-proportional) {
  thumb {
    -moz-box-flex: 1;
  }
}

