Bug 1600635 - Fix two minor issues with scrollbar style caching. r=heycam
Add -moz-inert and -moz-script-level to the set of internal properties
that aren't included in "all".

-moz-inert may need to be uncacheable in the future if we make it not
change the pointer-events computed value. Left a comment to that effect.

Differential Revision: https://phabricator.services.mozilla.com/D87115

UltraBlame original commit: f035432a86b895225c7ced5ba07be1b6c66ceb26

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -51,6 +51,10 @@
     -moz-list-reversed: initial;
     -moz-font-smoothing-background-color: initial;
     -moz-min-font-size-ratio: initial;
+    -moz-script-level: initial;
+    
+
+    -moz-inert: initial;
 
     
 
